Wed Feb 18 15:24:26 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Use AC_CONFIG_DIRS instead of CONFIG_DIRS, and
		remove use of DO_SUBDIRS.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Mon Nov 18 20:57:08 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* configure.in: Remove the popper, mailquery, and movemail
	 	directories.

Mon Jan 15 02:39:05 1996  Mark Eichin  <eichin@cygnus.com>

	* configure.in: add gssftp to CONFIG_DIRS so that the GSSAPI
	implementation of ftp gets built as well.

Fri Jul 7 15:40:00 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit setting of LDFLAGS, it's set by
		configure scripts.

Fri Jun  9 18:26:09 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.  Use DO_SUBDIRS to
		recurse down subdirectories.

Tue Aug  9 20:18:27 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in: nuked zmailnotify

Sat Jul 23 08:25:48 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in: autoconf'ing telnet

Wed Jul 20 00:10:30 1994  Tom Yu  (tlyu at dragons-lair)

	* configure.in: autoconf'ing gss-sample

Thu Jul 14 02:04:07 1994  Tom Yu  (tlyu at dragons-lair)

	* configure.in: suck in bsd now
